--- a/solutions/logic/27.tex
+++ b/solutions/logic/27.tex
@@ -15,7 +15,7 @@ $\square$
 $\blacksquare$
 
 
-\Statement Существует ровно $A_n^k := \frac{n!}{(n-k)!}$ вариантов размещений $k$ элементов и $n$ -- элементного множества.
+\Statement Существует ровно $A_n^k := \frac{n!}{(n-k)!}$ вариантов размещений $k$ элементов из $n$ -- элементного множества.
 
 $\square$
 
