--- a/solutions/logic/33.tex
+++ b/solutions/logic/33.tex
@@ -83,6 +83,8 @@ $\text{HALT} := \{ \langle \mathcal{M}, w \rangle \mid \mathcal{M} \; \text{ос
 
 $\square$
 
+Пронумеруем все МТ и закодирум каждое слово алфавита $\Sigma$ натуральным числом.
+
 Пусть существует такая МТ $\mathcal{H}$, что она отрабатывает за конечное время на корректном входе и
 
 $
@@ -93,20 +95,23 @@ $
 \end{cases}
 $
 
-Построим МТ $\mathcal{H}'$, которая принимает на вход код МТ $\mathcal{M}$ и запускает $\mathcal{H(M, M)}$.
+Тогда вычислима и функция $\mathcal{F}(i) := \mathcal{H}(\mathcal{M}_i, i)$.
+
+Построим МТ $\mathcal{H}'$, которая принимает на вход $i$ и запускает вычисление $\mathcal{F}(i)$.
 
 \begin{enumerate}
-    \item Если $\mathcal{H(M, M)}$ завершилась в 1, то $H'$ переходит в вечный цикл.
-    \item Если $\mathcal{H(M, M)}$ завершилась в 0, то $H'$ останавливается.
+    \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 1, то $H'$ переходит в вечный цикл.
+    \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 0, то $H'$ останавливается.
 \end{enumerate}
 
-Теперь рассмотрим работу $\mathcal{H'}$ на входе $\mathcal{H'}$.
+Но у $\mathcal{H}$ есть свой номер $N$.
+
+Теперь рассмотрим работу $\mathcal{H'}(N)$.
 
 \begin{enumerate}
-    \item Если $\mathcal{H'}$ остановилась, то $\mathcal{H(H', H')} = 0$ по определению $\mathcal{H'}$, но из определения $\mathcal{H}$ следует обратное. Получили противоречие.
+    \item Если $\mathcal{H'}$ остановилась, то $\mathcal{F}(N) = 0$ по определению $\mathcal{H'}$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = 1$ Получили противоречие.
 
-    \item Если $\mathcal{H'}$ не остановилась, то $\mathcal{H(H', H')} = 1$ по определению $\mathcal{H'}$, но из определения $\mathcal{H}$ следует обратное. Получили противоречие.
-\end{enumerate}
+    \item Если $\mathcal{H'}$ не остановилась, то $\mathcal{F}(N) = 1$ по определению $\mathcal{H'}$,но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = 0$ Получили противоречие.
 
 $\blacksquare$
 
@@ -126,7 +131,7 @@ $\square$
 
 Очевидно, что $R(n)$ нестрого возрастающая.
 
-Существует МТ, которая имеет $3n + 1$ состояние и печатает $4n + 1$ единицу с пустого входа.
+Существует МТ, которая имеет $3n + 1$ состояние, печатает $4n + 1$ единицу с пустого входа и останавливается. \textit{Без доказательства}.
 
 Построим МТ с $3n + 1 + C_1 + C_2$ состояниями, которая будет:
 
