--- a/solutions/logic/34.tex
+++ b/solutions/logic/34.tex
@@ -62,9 +62,9 @@ REG --- множество \textit{регулярных языков}, при э
     \item $\delta$ --- правила перехода.
 \end{enumerate}
 
-\Def \textit{ДКА (детерменированный конечный автомат)} --- конечный автомат, у которого $\delta : Q \times \Sigma \to Q$.
+\Def \textit{ДКА (детерменированный конечный автомат)} --- конечный автомат, у которого $\delta : G \to Q, G \subseteq Q \times \Sigma$.
 
-\Def \textit{НКА (недетерменированный конечный автомат)} --- конечный автомат, у которого $\delta : Q \times \Sigma \to 2^Q$.
+\Def \textit{НКА (недетерменированный конечный автомат)} --- конечный автомат, у которого $\delta : G \to 2^Q, G \subseteq Q \times \Sigma$.
 
 \Def \textit{ПДКА (полный детерменированный конечный автомат)} --- ДКА, у которого область определения $\delta$ совпадает с $Q \times \Sigma$.
 
