--- a/solutions/logic/33.tex
+++ b/solutions/logic/33.tex
@@ -110,8 +110,8 @@ $
 
 \begin{enumerate}
     \item Если $\mathcal{H'}$ остановилась, то $\mathcal{F}(N) = 0$ по определению $\mathcal{H'}$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = 1$ Получили противоречие.
-
-    \item Если $\mathcal{H'}$ не остановилась, то $\mathcal{F}(N) = 1$ по определению $\mathcal{H'}$,но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = 0$ Получили противоречие.
+    \item Если $\mathcal{H'}$ не остановилась, то $\mathcal{F}(N) = 1$ по определению $\mathcal{H'}$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = 0$ Получили противоречие.
+\end{enumerate}
 
 $\blacksquare$
 
