--- a/solutions/logic/32.tex
+++ b/solutions/logic/32.tex
@@ -95,16 +95,16 @@ $\square$
 
         Тогда получим $\varphi_L(y, z)$, равную полиному от $y, z$.
 
-        То есть вида $1^{\sigma_1} + y^{\sigma_2}z^{\sigma_3} + \alpha_1 x^{\sigma_4} + \alpha_2 y^{\sigma_5}$. Уберем отрицания над переменными и получим $\alpha_0 + yz + \alpha_1 x + \alpha_2 y$. Если есть $\alpha_0 = 1$, то возьмем отрицание от всей формулы и избавимся от него.
+        То есть вида $1^{\sigma_1} + y^{\sigma_2}z^{\sigma_3} + \alpha_1 y^{\sigma_4} + \alpha_2 z^{\sigma_5}$. Уберем отрицания над переменными и получим $\alpha_0 + yz + \alpha_1 y + \alpha_2 z$. Если есть $\alpha_0 = 1$, то возьмем отрицание от всей формулы и избавимся от него.
 
-        Получили формулу вида $xy + \alpha_1 x + \alpha_2 y$.
+        Получили формулу вида $yz + \alpha_1 y + \alpha_2 z$.
 
         Рассмотрим случаи:
 
         \begin{enumerate}
-            \item $\alpha_1 = \alpha_2 = 0$. Тогда получили $x \land y$.
-            \item \item $\alpha_1 = \alpha_2 = 1$. Формула --- $xy + x + y$. Ее отрицание даст $xy + x + y + 1 = (x + 1)(y + 1) = (\neg x) \land (\neg y)$. Уберем отриациня у $x, y$ и получим $x \land y$.
-            \item $\alpha_1 \ne \alpha_2$. Пусть $\alpha_1 = 1, \alpha_2 = 0$, формула имеет вид $xy + x = (y + 1) x = (\neg y) x$. Уберем отриацине у $y$ и получим $x \land y$.
+            \item $\alpha_1 = \alpha_2 = 0$. Тогда получили $y \land z$.
+            \item $\alpha_1 = \alpha_2 = 1$. Формула --- $yz + y + z$. Ее отрицание даст $yz + y + z + 1 = (y + 1)(z + 1) = (\neg y) \land (\neg z)$. Уберем отриациня у $y, z$ и получим $y \land z$.
+            \item $\alpha_1 \ne \alpha_2$. Пусть $\alpha_1 = 1, \alpha_2 = 0$, формула имеет вид $yz + y = (z + 1) y = (\neg z) y$. Уберем отриацине у $z$ и получим $y \land z$.
         \end{enumerate}
 
         Система $0, 1, \neg, \land$ полна (можно составить КНФ или ДНФ, получив \texttt{or} из законов де Моргана + есть константы).
