--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -28,7 +28,7 @@
 \end{equation*}
 Или в канонической форме:
 \begin{equation*}
-    \frac{x + x_0}{\alpha} = \frac{y - y_0}{\beta}
+    \frac{x - x_0}{\alpha} = \frac{y - y_0}{\beta}
 \end{equation*}
 
 Уравнение прямой, проходящей через 2 различные точки может быть записано в векторной форме
