--- a/solutions/linear/19.tex
+++ b/solutions/linear/19.tex
@@ -13,12 +13,12 @@
 
 \Def Пусть $\Lc$ - ЛП. Пусть $b: \Lc \to \R$. $b$ - КФ. $b$ имеет диагональный вид в базисе $(e_1, \dots, e_n)$, если
 \begin{equation*}
-    b(x) = \sum\limits_{k = 1}^n \alpha_k x^k, \alpha_k \in \R
+    b(x) = \sum\limits_{k = 1}^n \alpha_k x_k^2, \alpha_k \in \R
 \end{equation*}
 
 \Def Пусть $\Lc$ - ЛП. Пусть $b: \Lc \to \R$. $b$ - КФ. $b$ имеет канонический вид в базисе $(e_1, \dots, e_n)$, если
 \begin{equation*}
-    b(x) = \sum\limits_{k = 1}^n \alpha_k x^k, \alpha_k \in \{\pm 1, 0\}
+    b(x) = \sum\limits_{k = 1}^n \alpha_k x_k^2, \alpha_k \in \{\pm 1, 0\}
 \end{equation*}
 
 Далее сформулируем метод Лангранжа.
