Fix distance formula to use absolute value

--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -91,12 +91,12 @@
 
 Расстояние от точки с радиус-вектором $\mathbf{r}_1$ до плоскости, заданной уравнением $2$ равно
 \begin{equation*}
-    \frac{(\mathbf{r}_1-\mathbf{r}_0, \mathbf{n})}{|\mathbf{n}|}
+    \frac{|(\mathbf{r}_1-\mathbf{r}_0, \mathbf{n})|}{|\mathbf{n}|}
 \end{equation*}
 
 Расстояние от точки $M(x_1, y_1, z_1)$ до плоскости, заданной в прямоугольной системе координат уравнением $3$ равно
 \begin{equation*}
-    \frac{Ax_1+By_1+Cz_1}{\sqrt{A^2+B^2+C^2}}
+    \frac{|Ax_1+By_1+Cz_1|}{\sqrt{A^2+B^2+C^2}}
 \end{equation*}
 
 Прямая в пространстве может быть задана:
