Add linal proofs

--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -139,7 +139,7 @@
 
 Угол между прямыми в пространстве с направляющими векторами $\mathbf{a}$ и $\mathbf{b}$ выражается как
 \begin{equation*}
-    \cos(\phi) = |\frac{(\mathbf{a}, \mathbf{b})}{|\mathbf{a}| \cdot |\mathbf{b}|}|
+    \cos(\phi) = \left| \frac{(\mathbf{a}, \mathbf{b})}{|\mathbf{a}| \cdot |\mathbf{b}|} \right|
 \end{equation*}
 
 Угол между плоскостями -- угол между векторами нормали.
