Remove unimported library usage

--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -68,7 +68,7 @@ $\Rightarrow (x, A(y)) = 0 \Rightarrow A(y) \in \varepsilon_1^\bot \Rightarrow \
 
 \textbf{Теорема} Преобразование $\varphi: V \rightarrow V$ самосопряжено $\Longleftrightarrow$ существует ортонормированный базис в $V$, состоящий из его собственных векторов.
 
-\textbf{Доказательство $\Leftarrow$} В одну сторону очевидно, \st{и в другую тоже очевидно}, в базисе из собственных векторов матрица $A$ симметрична, а значит, преобразование самосопряжено.
+\textbf{Доказательство $\Leftarrow$} В одну сторону очевидно, (и в другую тоже очевидно), в базисе из собственных векторов матрица $A$ симметрична, а значит, преобразование самосопряжено.
 
 \textbf{Доказательство $\Rightarrow$} $A$ -- самосопряженное преобразование $\Rightarrow$ все корни его характеристического многочлена вещественные и можно представить $V = V_1 \bigoplus \cdots \bigoplus V_n$, где $V_i$ -- собственные подпространства $\Rightarrow V - $ инвариант как сумма инвариантных подпространств.
 
