Revise implications in complexity class definitions

--- a/solutions/logic/36.tex
+++ b/solutions/logic/36.tex
@@ -18,7 +18,7 @@ $\begin{cases}
     \item $\mathcal{A} \le_p \mathcal{B}, \mathcal{B} \le_p \mathcal{C} \implies \mathcal{A} \le_p \mathcal{C}$ (с функцией $h = g \circ f$).
     \item $\mathcal{B} \in \text{P}, \mathcal{A} \le_p \mathcal{B} \implies \mathcal{A} \in \text{P}$.
     \item $\mathcal{B} \in \text{NP}, \mathcal{A} \le_p \mathcal{B} \implies \mathcal{A} \in \text{NP}$.
-    \item $\mathcal{A} \le_p \mathcal{B} \implies \mathcal{A} \in \text{P}$ для всех нетривиальных $\mathcal{B}$ ($\neq \varnothing, \Sigma^*$).
+    \item $\mathcal{A} \in \text{P} \implies \mathcal{A} \le_p \mathcal{B}$ для всех нетривиальных $\mathcal{B}$ ($\neq \varnothing, \Sigma^*$).
     \item $\mathcal{A} \in \text{NPh}, \mathcal{A} \le_p \mathcal{B} \implies \mathcal{B} \in \text{NPh}$.
 \end{enumerate}
 
