Fix variable name from 'phi' to 'varphi' in equation

--- a/solutions/differential/20.tex
+++ b/solutions/differential/20.tex
@@ -8,7 +8,7 @@
 
 где $x$ -- независимая переменная, $y(x)$ -- искомая вещественнозначная функция, зависимость $F$ от $y^{(n)}$ не является фиктивной.
 
-\Def Функция $phi(x): I \rightarrow \R$ называется решением ДУ, если после замены $y$ на $phi$ равенство выше выполнено тождественно на $I$.
+\Def Функция $\varphi(x): I \rightarrow \R$ называется решением ДУ, если после замены $y$ на $\varphi$ равенство выше выполнено тождественно на $I$.
 
 Общее решение ДУ -- это множество всех его решений. 
 
