small fixes of analysis task 3

--- a/problems/analysis.tex
+++ b/problems/analysis.tex
@@ -152,8 +152,8 @@ y'' = \frac{d}{dx}\left(\frac{3}{(x-4)^2}\right) = 3 \cdot (-2)(x-4)^{-3} = -\fr
 
 $y'' = 0$ не имеет решений, но $y''$ меняет знак при переходе через $x = 4$:
 \begin{itemize}
-    \item При $x < 4$: $(x-4)^3 < 0$, значит $y'' > 0$ (выпукла вверх).
-    \item При $x > 4$: $(x-4)^3 > 0$, значит $y'' < 0$ (выпукла вниз).
+    \item При $x < 4$: $(x-4)^3 < 0$, значит $y'' > 0$ (выпукла вниз | вогнута).
+    \item При $x > 4$: $(x-4)^3 > 0$, значит $y'' < 0$ (выпукла вверх | выпукла).
 \end{itemize}
 
 Точка $x = 4$ не входит в область определения, поэтому \textbf{точек перегиба нет}.
@@ -183,7 +183,7 @@ $x_1 \approx 0{,}63$, $x_2 \approx 3{,}7$.
     \item Точек перегиба нет
 \end{itemize}
 
-\drawsomemedium{problems_2.png}
+\drawsomesmall{problems_2.png}
 
 \subsubsection{3. Исследование функционального ряда}
 
