--- a/solutions/analysis/11.tex
+++ b/solutions/analysis/11.tex
@@ -84,7 +84,7 @@ $\sum_{n=1}^{\infty} f_k \text{ сх. равн. на $X$} \;\iff\; \forall \eps 
 
 \Proof Просто применяем критерий Коши для ф. последовательностей к $S_n$. \Endproof
 
-\Consequence Если $\sum_{n=1}^{\infty} f_k$ сх. равн. на $X$, то $f_n \overset{X}{\rightrightarrows} 0$.
+\Consequence Если $\sum_{n=1}^{\infty} f_n$ сх. равн. на $X$, то $f_n \overset{X}{\rightrightarrows} 0$.
 
 \Theor{Обобщенный признак равномерной сходимости функционального ряда}
 
