--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -26,9 +26,9 @@
 
 \Lemma
 
-Множество значений \(
+Пусть $f \in C([a, b])$. Тогда множество значений \(
   f([a,b])=\{f(x)\mid x\in[a,b]\}
-\) ограничено
+\) ограничено.
 
 \Proof
 
