invariant fix 37 ticket

--- a/solutions/statistics/37.tex
+++ b/solutions/statistics/37.tex
@@ -113,20 +113,27 @@ L(\theta; X) = L(\theta; X_1, \ldots, X_n) = \prod_{i=1}^n p_\theta(X_i).
 
 \Theor{Инвариантность ОМП}
 
-Пусть $\hat{\theta}_{ML}$ — ОМП параметра $\theta$, и $g: \Theta \to \mathbb{R}$ — произвольная функция. Тогда $g(\hat{\theta}_{ML})$ — ОМП параметра $g(\theta)$.
+Пусть $\hat{\theta}^*$ — ОМП параметра $\theta$, и $g: \Theta \to \F$ — взаимно однозначное отображение (биекция). Тогда $g(\hat{\theta}^*)$ — ОМП параметра $g(\theta)$.
+
+\Note В общем случае $\Theta \subset \R^n$, т.е работаем с многомерными векторами.
 
 \Proof
 
-Пусть $\eta = g(\theta)$. Для любого $\eta$ из области значений $g$:
+Пусть $\eta = g(\theta)$. Тогда
 \[
-\sup_{\theta: g(\theta) = \eta} L(\theta; X) \leq \sup_{\theta \in \Theta} L(\theta; X) = L(\hat{\theta}_{ML}; X).
+sup_{\theta \in \Theta} \ell(\theta, X) = sup_{\eta \in \F} \ell(g^{-1}(\eta), X)
 \]
+Т.к в $\hat{\theta}^*$ достигается супремум по условию, $\ell(\hat{\theta}^*, X) = sup_{\theta \in \Theta} \ell(\theta, X)$
 
-Максимум функции правдоподобия по $\eta$ достигается при $\eta = g(\hat{\theta}_{ML})$.
+Пусть $\eta^* = g(\hat{\theta}^*), \ \text{т.е.} \ \hat{\theta}^* = g^{-1}(\eta^*)$. Тогда для него верно
+\[
+ell(g^{-1}(\eta^*), X) = sup_{\eta \in \F} \ell(g^{-1}(\eta), X)
+\]
+Но это же означает что $\eta^*$ - точка, где достигается супремум для $\eta = g(\theta)$. А значит это и есть ОМП
 
 \Endproof
 
-\textbf{Замечание.} Инвариантность — важное свойство ОМП. Например, если $\hat{\sigma}^2$ — ОМП для дисперсии, то $\hat{\sigma} = \sqrt{\hat{\sigma}^2}$ — ОМП для стандартного отклонения.
+\textbf{Замечание.} Инвариантность верна и без требования биективности функции $g$, но доказательство становится кратно сложнее и выходит за рамки курса.
 
 \Example \textbf{(Нормальное распределение)}
 
